add func: search teachers

--- a/src/main/webapp/app/entities/mean-score/mean-score-detail.component.html
+++ b/src/main/webapp/app/entities/mean-score/mean-score-detail.component.html
@@ -25,6 +25,10 @@
                 <dd>
                     <span>{{meanScore.sotinchidat}}</span>
                 </dd>
+                <dt><span jhiTranslate="vnuaServerApp.meanScore.sotinchitichluy">Sotinchitichluy</span></dt>
+                <dd>
+                    <span>{{meanScore.sotinchitichluy}}</span>
+                </dd>
                 <dt><span jhiTranslate="vnuaServerApp.meanScore.phanLoai">Phan Loai</span></dt>
                 <dd>
                     <span>{{meanScore.phanLoai}}</span>
