--- a/src/main/webapp/app/entities/mean-score/mean-score-update.component.html
+++ b/src/main/webapp/app/entities/mean-score/mean-score-update.component.html
@@ -35,6 +35,11 @@
                            formControlName="sotinchidat"/>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="vnuaServerApp.meanScore.sotinchitichluy" for="field_sotinchitichluy">Sotinchitichluy</label>
+                    <input type="number" class="form-control" name="sotinchitichluy" id="field_sotinchitichluy"
+                           formControlName="sotinchitichluy"/>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="vnuaServerApp.meanScore.phanLoai" for="field_phanLoai">Phan Loai</label>
                     <input type="text" class="form-control" name="phanLoai" id="field_phanLoai"
                            formControlName="phanLoai"/>
