--- a/src/main/webapp/app/entities/mean-score/mean-score.component.html
+++ b/src/main/webapp/app/entities/mean-score/mean-score.component.html
@@ -39,6 +39,7 @@
             <th scope="col"  jhiSortBy="diemtbtl10"><span jhiTranslate="vnuaServerApp.meanScore.diemtbtl10">Diemtbtl 10</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="diemtbtl4"><span jhiTranslate="vnuaServerApp.meanScore.diemtbtl4">Diemtbtl 4</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="sotinchidat"><span jhiTranslate="vnuaServerApp.meanScore.sotinchidat">Sotinchidat</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th scope="col"  jhiSortBy="sotinchitichluy"><span jhiTranslate="vnuaServerApp.meanScore.sotinchitichluy">Sotinchitichluy</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="phanLoai"><span jhiTranslate="vnuaServerApp.meanScore.phanLoai">Phan Loai</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="type"><span jhiTranslate="vnuaServerApp.meanScore.type">Type</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="studentId"><span jhiTranslate="vnuaServerApp.meanScore.studentId">Student Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -53,6 +54,7 @@
                 <td>{{meanScore.diemtbtl10}}</td>
                 <td>{{meanScore.diemtbtl4}}</td>
                 <td>{{meanScore.sotinchidat}}</td>
+                <td>{{meanScore.sotinchitichluy}}</td>
                 <td>{{meanScore.phanLoai}}</td>
                 <td>{{meanScore.type}}</td>
                 <td>{{meanScore.studentId}}</td>
