create link to footer

--- a/src/main/webapp/app/entities/teacher/teacher-update.component.html
+++ b/src/main/webapp/app/entities/teacher/teacher-update.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="vnuaServerApp.teacher.teacherID" for="field_teacherID">Teacher ID</label>
-                    <input type="number" class="form-control" name="teacherID" id="field_teacherID"
+                    <input type="text" class="form-control" name="teacherID" id="field_teacherID"
                            formControlName="teacherID"/>
                 </div>
                 <div class="form-group">
