get top students

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -8,7 +8,7 @@
                     <div>
                         <jhi-alert-error></jhi-alert-error>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="query" id="field_query" formControlName="query" placeholder="Tên hoặc mã sv, quê, bộ môn, ..."/>
+                            <input type="text" class="form-control" name="query" id="field_query" formControlName="query" placeholder="{{'home.search_student_hint' | translate}}"/>
                         </div>
                         <div>
                             <button class="btn btn-primary float-right jh-create-entity create-score">
