--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -57,11 +57,11 @@
 
                         <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
                         <div class="title">
-                            <h4 jhiTranslate="home.find_score">Xem điểm thi</h4>
+                            <h4 jhiTranslate="home.find_score">Xem thứ hạng</h4>
                         </div>
 
                         <div class="text">
-                            <span jhiTranslate="home.find_score_detail">Xem điểm thi</span>
+                            <span jhiTranslate="home.find_score_detail">Xem thứ hạng theo trường, theo lớp</span>
                         </div>
                         <button type="submit"
                                 [routerLink]="['hscore']"
